# vstep-rag-2

./: .dockerignore  .env.template  .gitignore  Dockerfile  app.py  chat_ui.py  config.py  eval.py  load_output.py  prompt.txt  pyproject.toml  routes.py  test.py
.cache/: 0.md  1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  chunks.json
.gradio/flagged/: dataset1.csv
BAAI/: chunking.py  embedding_func.py
evaluation/: output1.json  output2.json  output_full.json  output_nghi_them.json  output_raft_sgu.json
phoBERT/: chunking.py  embedding_func.py
sources/: sgu.md
utils/: database.py  prompt.py  reranker.py  scrape.py  setup_chroma_db.py  vncorenlp_tokenizer.py
