[project]
name = "vstep-rag-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chonkie[semantic]>=0.2.2",
    "docling>=2.14.0",
    "firecrawl-py>=1.6.8",
    "flask>=3.1.0",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.12",
    "langchain-core>=0.3.25",
    "langchain-huggingface>=0.1.2",
    "langchain-together>=0.2.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.3",
    "vncorenlp>=1.0.3",
]
